<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.kj.repo</groupId>
	<artifactId>kj-repo</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>
	<modules>
		<module>kj-repo-bean</module>
		<module>kj-repo-demo</module>
		<module>kj-repo-boot</module>
		<module>kj-repo-log</module>
		<module>kj-repo-util</module>
		<module>kj-repo-web</module>
		<module>kj-repo-saver</module>
		<module>kj-repo-tool</module>
		<module>kj-repo-shell</module>
		<module>kj-repo-test</module>
		<module>kj-repo-base</module>
		<module>kj-repo-crawler</module>
		<module>kj-repo-net</module>
		<module>kj-repo-hystrix</module>
		<module>kj-repo-shyiko</module>
		<module>kj-repo-algorithm</module>
		<module>kj-repo-curator</module>
		<module>kj-repo-rpc</module>
		<module>kj-repo-cron</module>
		<module>kj-repo-rxjava</module>
		<module>kj-repo-sentry</module>

		<module>kj-repo-json</module>
    <module>kj-infra</module>
  </modules>

	<properties>
		<maven-compiler.version>3.1</maven-compiler.version>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-core -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>1.2.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-access -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-access</artifactId>
			<version>1.2.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.2</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>


	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.kj.repo</groupId>
				<artifactId>kj-repo-log</artifactId>
				<version>1.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.kj.repo</groupId>
				<artifactId>kj-repo-base</artifactId>
				<version>1.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.kj.repo</groupId>
				<artifactId>kj-repo-bean</artifactId>
				<version>1.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.kj.repo</groupId>
				<artifactId>kj-repo-boot</artifactId>
				<version>1.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.kj.repo</groupId>
				<artifactId>kj-repo-demo</artifactId>
				<version>1.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.kj.repo</groupId>
				<artifactId>kj-repo-util</artifactId>
				<version>1.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.kj.repo</groupId>
				<artifactId>kj-repo-web</artifactId>
				<version>1.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.kj.repo</groupId>
				<artifactId>kj-repo-saver</artifactId>
				<version>1.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>com.kj.repo</groupId>
				<artifactId>kj-repo-net</artifactId>
				<version>1.0-SNAPSHOT</version>
			</dependency>


		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<showWarnings>true</showWarnings>
					<encoding>${project.build.sourceEncoding}</encoding>
					<testSource>${java.version}</testSource>
					<testTarget>${java.version}</testTarget>
				</configuration>
			</plugin>
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-dependency-plugin</artifactId> 
				<version>2.10</version> <executions> <execution> <id>copy-dependencies</id> 
				<phase>package</phase> <goals> <goal>copy-dependencies</goal> </goals> <configuration> 
				<outputDirectory>${project.build.directory}/lib</outputDirectory> </configuration> 
				</execution> </executions> </plugin> -->
		</plugins>
	</build>
</project>